--- a/MVCPatternAPP.Data/MVCPatternAPP.Data.csproj
+++ b/MVCPatternAPP.Data/MVCPatternAPP.Data.csproj
@@ -80,6 +80,8 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\CategoryRepository.cs" />
+    <Compile Include="Repository\Interface\ICategory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -99,5 +101,6 @@
       <DependentUpon>201901301742202_populateCategory.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
